--- a/frontend/src/app/pacientes/formulario-paciente/telefone/telefone.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/telefone/telefone.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="telefone">
+<form [formGroup]="telefone" (ngSubmit)="adicionar()">
   <div class="ui-g ui-fluid">
     <div class="ui-g-12">
       <div class="ui-g-5 ui-sm-12">
@@ -32,7 +32,7 @@
       <div class="ui-g-5 ui-sm-12">
         <span class="ui-float-label">
           <p-dropdown
-            [options]="cities1"
+            [options]="opcao"
             formControlName="tipo"
             pTooltip="Informe o tipo de telefone."
           ></p-dropdown>
@@ -51,10 +51,11 @@
         </span>
       </div>
     </div>
-    <p-button label="adicionar"></p-button>
+    <p-button label="adicionar" type="submit" [disabled]="telefone.invalid"></p-button>
 
     <basis-datatable type="memory" [value]="fakeData">
-      <p-column header="tipo" field="tipoDeTelefone"></p-column>
+      <p-column header="tipo" field="tipo"></p-column>
+      <p-column header="DDD" field="DDD"></p-column>
       <p-column header="telefone" field="telefone"></p-column>
       <p-column header="observação" field="observacao"></p-column>
     </basis-datatable>
