Utiliza pipe para cartaoSUS

--- a/frontend/src/app/pacientes/lista-de-pacientes/lista-de-pacientes.component.html
+++ b/frontend/src/app/pacientes/lista-de-pacientes/lista-de-pacientes.component.html
@@ -47,8 +47,7 @@
           <p-column header="Data de Nascimento" field="dataDeNascimento"> </p-column>
           <p-column header="Nº Cartão SUS" field="cartaoSUS">
             <ng-template let-data="rowData" pTemplate="body">
-              {{ data['cartaoSUS'].numero }}
-              <!-- {{ data['cartaoSUS'].numero | cartaoSUS}} -->
+              {{ data['cartaoSUS'].numero | cartaoSUS }}
             </ng-template>
           </p-column>
         </basis-datatable>
