Melhora a responsividade do componente

--- a/frontend/src/app/pacientes/formulario-paciente/dados-pessoais/dados-pessoais.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/dados-pessoais/dados-pessoais.component.html
@@ -1,6 +1,6 @@
 <div class="ui-g ui-fluid" [formGroup]="dadosPessoais">
     <div class="ui-g-12">
-        <div class="ui-g-6">
+        <div class="ui-g-6 ui-sm-12">
             <span class="ui-float-label">
                 <input
                     type="text"
@@ -11,7 +11,7 @@
                 <label>Nome Completo</label>
             </span>
         </div>
-        <div class="ui-g-6">
+        <div class="ui-g-6 ui-sm-12">
             <span class="ui-float-label">
                 <input
                     type="text"
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="ui-g-12">
-        <div class="ui-g-3">
+        <div class="ui-g-3 ui-sm-12">
             <span class="ui-float-label">
                 <p-dropdown
                     [options]="opcoesDeSexo"
@@ -34,7 +34,7 @@
                 <label>Sexo</label>
             </span>
         </div>
-        <div class="ui-g-3">
+        <div class="ui-g-3 ui-sm-12">
             <span class="ui-float-label">
                 <p-dropdown
                     [options]="opcoesDeRaca"
@@ -44,7 +44,7 @@
                 <label>Raça</label>
             </span>
         </div>
-        <div class="ui-g-3">
+        <div class="ui-g-3 ui-sm-12">
             <span class="ui-float-label">
                 <p-dropdown
                     [options]="opcoesDeEtnia"
@@ -55,7 +55,7 @@
                 <label>Etnia</label>
             </span>
         </div>
-        <div class="ui-g-3">
+        <div class="ui-g-3 ui-sm-12">
             <span class="ui-float-label">
                 <p-dropdown
                     [options]="opcoesDeEstadoCivil"
@@ -67,7 +67,7 @@
         </div>
     </div>
     <div class="ui-g-12">
-        <div class="ui-g-2">
+        <div class="ui-g-2 ui-sm-12">
             <span class="ui-float-label">
                 <p-inputMask
                     mask="9999999/9"
@@ -78,7 +78,7 @@
                 <label>Prontuário da Mãe</label>
             </span>
         </div>
-        <div class="ui-g-5">
+        <div class="ui-g-5 ui-sm-12">
             <span class="ui-float-label">
                 <input
                     type="text"
@@ -89,7 +89,7 @@
                 <label>Nome da Mãe</label>
             </span>
         </div>
-        <div class="ui-g-5">
+        <div class="ui-g-5 ui-sm-12">
             <span class="ui-float-label">
                 <input
                     type="text"
@@ -101,7 +101,7 @@
             </span>
         </div>
     </div>
-    <div class="ui-g-12">
+    <div class="ui-g-12 ui-sm-12">
         <div class="ui-g-2">
             <span class="ui-float-label">
                 <p-calendar
@@ -119,7 +119,7 @@
                 <label>Data de Nascimento</label>
             </span>
         </div>
-        <div class="ui-g-2">
+        <div class="ui-g-2 ui-sm-12">
             <span class="ui-float-label">
                 <p-calendar
                     timeOnly="true"
@@ -129,7 +129,7 @@
                 <label>Hora do Nascimento</label>
             </span>
         </div>
-        <div class="ui-g-2">
+        <div class="ui-g-2 ui-sm-12">
             <span class="ui-float-label">
                 <input
                     type="text"
@@ -143,7 +143,7 @@
                 <label>Idade</label>
             </span>
         </div>
-        <div class="ui-g-2">
+        <div class="ui-g-2 ui-sm-12">
             <span class="ui-float-label">
                 <p-dropdown
                     [options]="opcoesDeNacionalidade"
@@ -154,7 +154,7 @@
                 <label>Nacionalidade</label>
             </span>
         </div>
-        <div class="ui-g-2">
+        <div class="ui-g-2 ui-sm-12">
             <span class="ui-float-label">
                 <p-dropdown
                     [options]="opcoesDeNaturalidade"
@@ -166,7 +166,7 @@
                 <label>Naturalidade</label>
             </span>
         </div>
-        <div class="ui-g-2">
+        <div class="ui-g-2 ui-sm-12">
             <span class="ui-float-label">
                 <input
                     type="text"
@@ -183,7 +183,7 @@
         </div>
     </div>
     <div class="ui-g-12">
-        <div class="ui-g-4">
+        <div class="ui-g-4 ui-sm-12">
             <span class="ui-float-label">
                 <p-dropdown
                     [options]="opcoesDeGrauDeInstrucao"
@@ -193,7 +193,7 @@
                 <label>Grau de Instrução</label>
             </span>
         </div>
-        <div class="ui-g-4">
+        <div class="ui-g-4 ui-sm-12">
             <span class="ui-float-label">
                 <p-dropdown
                     [options]="opcoesDeOcupacao"
@@ -204,7 +204,7 @@
                 <label>Ocupação</label>
             </span>
         </div>
-        <div class="ui-g-4">
+        <div class="ui-g-4 ui-sm-12">
             <span class="ui-float-label">
                 <p-dropdown
                     [options]="opcoesDeReligiao"
@@ -217,7 +217,7 @@
         </div>
     </div>
     <div class="ui-g-12">
-        <div class="ui-g-12">
+        <div class="ui-g-4 ui-sm-12">
             <span class="ui-float-label">
                 <input
                     type="email"
