--- a/frontend/src/app/pacientes/formulario-paciente/dados-pessoais/dados-pessoais.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/dados-pessoais/dados-pessoais.component.html
@@ -102,7 +102,7 @@
         </div>
     </div>
     <div class="ui-g-12 ui-sm-12">
-        <div class="ui-g-2">
+        <div class="ui-g-2 ui-sm-12">
             <span class="ui-float-label">
                 <p-calendar
                     [locale]="localizacao"
